--- a/pipelines/azure-test.yaml
+++ b/pipelines/azure-test.yaml
@@ -31,6 +31,7 @@ jobs:
           # Install depedency packages
           sudo apt-get update
           sudo apt-get install -y build-essential libffi-dev libfuzzy-dev python3-dev
+          sudo env "PATH=$PATH" python -m pip install --no-cache-dir -U assemblyline_client click
           sudo env "PATH=$PATH" python -m pip install --no-cache-dir -e . -r test/requirements.txt
           sudo rm -rf /tmp/* /var/lib/apt/lists/* ~/.cache/pip
         displayName: Setup Environment
