--- a/pipelines/azure-build.yaml
+++ b/pipelines/azure-build.yaml
@@ -18,6 +18,8 @@ stages:
             displayName: Set python version
             inputs: { versionSpec: 3.8 }
           - script: |
+              export VERSION=${BUILD_SOURCEBRANCH#"refs/tags/v"}
+              echo $VERSION > assemblyline_incident_manager/VERSION
               sudo env "PATH=$PATH" python -m pip install --no-cache-dir -U wheel pip
               python setup.py bdist_wheel
           - publish: $(System.DefaultWorkingDirectory)/dist/
@@ -52,15 +54,14 @@ stages:
             artifact: pipelines
           - download: current
             artifact: test
-            displayName: Pull Containers
           - script: |
+              set -x  # Echo commands before they are run
+              sudo apt-get update
+              sudo apt-get install -y build-essential libffi-dev libfuzzy-dev python3-dev
               export VERSION=${BUILD_SOURCEBRANCH#"refs/tags/v"}
-              sudo env "PATH=$PATH" python -m pip install -f dist/ "assemblyline-incident-manager[test]==${VERSION}"
-              sudo env "PATH=$PATH" python -m pip install -r test/requirements.txt
-            workingDirectory: $(Pipeline.Workspace)
+              sudo -E env "PATH=$PATH" python -m pip install --no-cache-dir -f $(Pipeline.Workspace)/dist/ "assemblyline-incident-manager[test]==${VERSION}"
             displayName: Install assemblyline_incident_manager
-          - script: |
-              pytest -rsx -vv
+          - script: pytest -rsx -vv
             workingDirectory: $(Pipeline.Workspace)/test
             displayName: Test
   - stage: deploy
@@ -70,11 +71,12 @@ stages:
         variables:
           - group: deployment-information
         steps:
-          - task: UsePythonVersion@0
-            displayName: Set python version
-            inputs: { versionSpec: 3.8 }
           - download: current
             artifact: dist
+          - task: UsePythonVersion@0
+            displayName: Set python version
+            inputs:
+              versionSpec: '3.8'
           - script: |
               set -xv  # Echo commands before they are run
               sudo env "PATH=$PATH" python -m pip install --no-cache-dir twine
