--- a/pipelines/azure-build.yaml
+++ b/pipelines/azure-build.yaml
@@ -57,9 +57,12 @@ stages:
               set -x  # Echo commands before they are run
               sudo apt-get update
               sudo apt-get install -y build-essential libffi-dev libfuzzy-dev python3-dev
+            displayName: Setup Environment
+          - script: |
               export VERSION=${BUILD_SOURCEBRANCH#"refs/tags/v"}
-              sudo -E env "PATH=$PATH" python -m pip install --no-cache-dir -f $(Pipeline.Workspace)/dist/ "assemblyline-incident-manager[test]==${VERSION}"
+              sudo env "PATH=$PATH" python -m pip install -f dist/ "assemblyline-incident-manager[test]==${VERSION}"
               sudo env "PATH=$PATH" python -m pip install -r test/requirements.txt
+            workingDirectory: $(Pipeline.Workspace)
             displayName: Install assemblyline_incident_manager
           - script: pytest -rsx -vv
             workingDirectory: $(Pipeline.Workspace)/test
